@@ -10,4 +10,6 @@ has 'size'    => ( is => 'ro', isa => 'Int',        required => 1 );
 has 'content' => ( is => 'ro', isa => 'Str',        required => 1 );
 has 'sha1'    => ( is => 'ro', isa => 'Str',        required => 1 );
 
+__PACKAGE__->meta->make_immutable;
+
 1;
