@@ -4,4 +4,6 @@ use MooseX::StrictConstructor;
 use Moose::Util::TypeConstraints;
 extends 'Git::PurePerl::Object';
 
+__PACKAGE__->meta->make_immutable;
+
 1;
