@@ -10,6 +10,8 @@ has 'author'    => ( is => 'rw', isa => 'Str', required => 0 );
 has 'committer' => ( is => 'rw', isa => 'Str', required => 0 );
 has 'comment'   => ( is => 'rw', isa => 'Str', required => 0 );
 
+__PACKAGE__->meta->make_immutable;
+
 sub BUILD {
     my $self = shift;
     my @lines = split "\n", $self->content;
