@@ -11,6 +11,8 @@ has 'directory_entries' => (
     auto_deref => 1,
 );
 
+__PACKAGE__->meta->make_immutable;
+
 sub BUILD {
     my $self    = shift;
     my $content = $self->content;
